RESOLVED FIXED88577
Search highlight does not scroll with the content of the page, and find overlay doesn't work, on large-enough window
https://bugs.webkit.org/show_bug.cgi?id=88577
Summary Search highlight does not scroll with the content of the page, and find overl...
Anders Carlsson
Reported 2012-06-07 14:31:06 PDT
Search highlight does not scroll with the content of the page, and find overlay doesn't work, on large-enough window
Attachments
Patch (1.90 KB, patch)
2012-06-07 14:32 PDT, Anders Carlsson
sullivan: review+
Anders Carlsson
Comment 1 2012-06-07 14:32:11 PDT
John Sullivan
Comment 2 2012-06-07 14:36:03 PDT
Comment on attachment 146391 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=146391&action=review > Source/WebKit2/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:419 > + static_cast<GraphicsLayerCA*>(m_pageOverlayLayer.get())->setAllowTiledLayer(false); I think this would benefit from a comment explaining why it is necessary.
Anders Carlsson
Comment 3 2012-06-07 15:08:48 PDT
Note You need to log in before you can comment on or make changes to this bug.