Search highlight does not scroll with the content of the page, and find overlay doesn't work, on large-enough window https://bugs.webkit.org/show_bug.cgi?id=88577 <rdar://problem/11430118>

Reviewed by John Sullivan.

Prevent the page overlay layer from falling into tiled mode.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::createPageOverlayLayer):

Canonical link: https://commits.webkit.org/106397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119758 268f45cc-cd09-0410-ab3c-d52691b4dbfc